--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,14 +20,6 @@
     <button type="submit">Відправити</button>
   </form>
 
-  <script src="../chat.js">
-    // const ws = new WebSocket('ws://localhost:5000');
-    // ws.onopen = () => {
-    //   // console.log("Connection succesful");
-    // }
-    // ws.onmessage = (e) => {
-    //   console.log(e.data);
-    // }
-  </script>
+  <script src="../chat.js"></script>
 </body>
 </html>
